chore: added striped row hover, and fixed the layout break in expand row

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -46,6 +46,7 @@
         --bt-normal-row-striped-bg-dark: var(--bt-row-bg-dark, #141414);
         --bt-normal-row-striped-bg: light-dark(var(--bt-normal-row-striped-bg-light), var(--bt-normal-row-striped-bg-dark));
 
+
         --bt-expanded-row-striped-bg-light: var(--bt-row-bg-light, #f8f8f8);
         --bt-expanded-row-striped-bg-dark: var(--bt-row-bg-dark, #d9d9d9);
         --bt-expanded-row-striped-bg: light-dark(var(--bt-expanded-row-striped-bg-light), var(--bt-expanded-row-striped-bg-dark));
@@ -58,9 +59,6 @@
         --bt-header-row-bg-dark: var(--bt-row-bg-dark, #000000);
         --bt-header-row-bg: light-dark(var(--bt-header-row-bg-light), var(--bt-header-row-bg-dark));
 
-        // Hover colors
-        // --bt-row-hover-bg-light: #E0EEFF;
-        // --bt-row-hover-bg-dark: #041529;
         --bt-row-hover-bg: light-dark(var(--bt-row-hover-bg-light), var(--bt-row-hover-bg-dark));
 
         --bt-normal-row-hover-bg-light: var(--bt-row-hover-bg-light, #daebff);
@@ -70,6 +68,14 @@
         --bt-expanded-row-hover-bg-light: var(--bt-row-hover-bg-light, #daebff);
         --bt-expanded-row-hover-bg-dark: var(--bt-row-hover-bg-dark, #0f1a27);
         --bt-expanded-row-hover-bg: light-dark(var(--bt-expanded-row-hover-bg-light), var(--bt-expanded-row-hover-bg-dark));
+
+        --bt-normal-row-hover-striped-bg-light: var(--bt-row-bg-light, #daebff);
+        --bt-normal-row-hover-striped-bg-dark: var(--bt-row-bg-dark, #0f1a27);
+        --bt-normal-row-hover-striped-bg: light-dark(var(--bt-normal-row-hover-striped-bg-light), var(--bt-normal-row-hover-striped-bg-dark));
+
+        --bt-extended-row-hover-striped-bg-light: var(--bt-row-bg-light, #daebff);
+        --bt-extended-row-hover-striped-bg-dark: var(--bt-row-bg-dark, #0f1a27);
+        --bt-extended-row-hover-striped-bg: light-dark(var(--bt-extended-row-hover-striped-bg-light), var(--bt-extended-row-hover-striped-bg-dark));
 
         /** Row foreground color */
         // NOTE: these two are the general color that will change the entire color 
